--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase": "^7.10.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "bootstrap": "^4.4.1",
+    "firebase": "^7.13.1",
+    "history": "latest",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.2.0",
-    "react-redux-firebase": "^3.1.2",
+    "react-redux-firebase": "^3.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
